# midas

./: .editorconfig  .flake8  .pylintrc  .travis.yml  MANIFEST.in  README.md  setup.cfg  setup.py
.github/workflows/: ci.yml  python-package.yml
conda/: meta.yaml
docs/: Makefile  conf.py  database.rst  fileformats.rst  index.rst  installation.rst  make.bat  midas.archive.rst  midas.classify.rst  midas.cython.metrics.rst  midas.cython.rst  midas.cython.seqs.rst  midas.cython.test.rst  midas.database.base.rst  midas.database.basicdatabase.rst  midas.database.mixins.rst  midas.database.rst  midas.database.sqla.rst  midas.db.migrate.rst  midas.db.mixins.rst  midas.db.models.rst  midas.db.old.base.rst  midas.db.old.basicdatabase.rst  midas.db.old.mixins.rst  midas.db.old.rst  midas.db.old.sqla.rst  midas.db.rst  midas.db.sqla.rst  midas.io.rst  midas.io.seq.rst  midas.io.signaturefile.rst  midas.io.util.rst  midas.kmers.rst  midas.knn.rst  midas.ncbi.rst  midas.parallel.rst  midas.query.rst  midas.remote.rst  midas.rst  midas.seqstore.base.rst  (+6 more)
docs/source/: conf.py  index.rst  midas.db.migrate.rst  midas.db.rst  midas.db.sqla.rst  midas.io.json.rst  midas.io.rst  midas.io.seq.rst  midas.kmers.rst  midas.metric.rst  midas.rst  midas.test.rst  midas.util.attr.rst  midas.util.rst  midas.util.typing.rst
gambit/: __main__.py  metric.py  test.py
gambit/cli/: __init__.py  context.py  query.py  root.py
gambit/db/: fromfile.py  midasdb.py  models.py
gambit/io/: seq.py
gambit/query/: __init__.py  results.py  run.py
gambit/signatures/: hdf5.py
midas/: __init__.py  archive.py  classify.py  kmers.py  knn.py  metric.py  ncbi.py  parallel.py  query.py  remote.py  signaturefile.py  test.py  util.py  version.py
midas/_cython/: metric.pxd
midas/backports/: __init__.py  ioutil.py  signaturefile.py
midas/cli/: context.py  query.py  root.py
midas/cython/: kmers.pxd  kmers.pyx  metrics.c  metrics.pxd  metrics.pyx  seqs.c  seqs.pxd  seqs.pyx  test.c
midas/database/: base.py  basicdatabase.py  io.py  mixins.py  models.py  sqla.py
midas/db/: __init__.py  fromfile.py  midasdb.py  mixins.py  models.py  sqla.py
midas/io/: __init__.py  json.py  seq.py  signaturefile.py  util.py
midas/query/: __init__.py  classify.py  results.py  run.py
tests/: conftest.py  test_archive.py  test_classify.py  test_cython.py  test_filesequencestore.py  test_full_db.py  test_kmers.py  test_knn.py  test_metric.py  test_metrics.py  test_ncbi.py  test_query.py  test_test.py
(+74 files in other folders)
