[metadata]
name = midas
description = Microbial IDentification And Surveillance through whole genome sequencing data
version = 2.1.0
author = Jared Lumpe
author_email = mjlumpe@gmail.com
url = http://github.com/jlumpe/midas


[options]
packages = find:
namespace_packages = midas
zip_safe = false
include_package_data = true

setup_requires =
	Cython~=0.27

install_requires =
	numpy~=1.13
	sqlalchemy~=1.1
	biopython~=1.69
	alembic~=0.9
	pydatatypes~=0.1

tests_require =
	pytest

dependency_links =
	https://github.com/jlumpe/pydatatypes/archive/master.tar.gz#egg=pydatatypes-0.1


# Aliases for setuptools commands
[aliases]
test = pytest


# Pytest settings
[tool:pytest]

# Run tests in tests/, obviously
# Also check docstrings in package
testpaths = tests midas

# Run doctests on all modules
addopts = --doctest-modules
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL


# Flake8 settings
[flake8]

# Ignore these codes:
ignore =
	# TABS ARE BETTER
	W191,
	# indentation contains mixed spaces and tabs - spaces for alignment
	E101,
	# Blank line at end of file - we require this in .editorconfig
	W391

# Exclude these paths:
exclude = docs

# Check style of doctests (not working?)
doctests = True
